# macchina.io

./: CMakeLists.txt
platform/: CMakeLists.txt  components
platform/CodeGeneration/: CMakeLists.txt
platform/CodeGeneration/cmake/: PocoCodeGenerationConfig.cmake
platform/CodeGeneration/testsuite/: CMakeLists.txt
platform/CppParser/: CMakeLists.txt
platform/CppParser/cmake/: PocoCppParserConfig.cmake
platform/CppParser/testsuite/: CMakeLists.txt
platform/Crypto/: CMakeLists.txt
platform/Data/: CMakeLists.txt
platform/Data/SQLite/: CMakeLists.txt
platform/Foundation/: CMakeLists.txt
platform/JSON/: CMakeLists.txt
platform/Net/: CMakeLists.txt
platform/NetSSL_OpenSSL/: CMakeLists.txt
platform/PageCompiler/: CMakeLists.txt
platform/PageCompiler/File2Page/: CMakeLists.txt
platform/RemotingNG/: CMakeLists.txt
platform/RemotingNG/REST/: CMakeLists.txt
platform/RemotingNG/REST/cmake/: PocoRemotingNGRESTConfig.cmake
platform/RemotingNG/REST/include/Poco/RemotingNG/REST/: Listener.h  ManualDeserializer.h  ManualSerializer.h  PlainWriter.h  REST.h  RequestHandler.h  ServerTransport.h  XMLContentHandler.h  XMLDeserializer.h  XMLSerializer.h
platform/RemotingNG/REST/src/: Listener.cpp  ManualDeserializer.cpp  ManualSerializer.cpp  PlainWriter.cpp  RequestHandler.cpp  ServerTransport.cpp  XMLContentHandler.cpp  XMLDeserializer.cpp  XMLSerializer.cpp
platform/RemotingNG/RemoteGen/: CMakeLists.txt
platform/RemotingNG/TCP/: CMakeLists.txt
platform/RemotingNG/cmake/: PocoRemotingNGConfig.cmake
platform/Util/: CMakeLists.txt
platform/XML/: CMakeLists.txt
platform/Zip/: CMakeLists.txt
(+11 files in other folders)
